changed the image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h2>About Me</h2>
 
 <div id="content-box">
-        <img id="image" src="http://www.traveller.com.au/content/dam/images/g/u/n/q/h/0/image.related.articleLeadwide.620x349.gunpvd.png/1488330286332.png">
+        <img id="image" src="https://media.licdn.com/dms/image/C4D03AQF3Zu-OV7T0vg/profile-displayphoto-shrink_200_200/0?e=1556755200&v=beta&t=Oq01Zyz3HqCzdtMsdjfz4Fsh4Op6wSr3OdyKCiKdu8Q">
      
 
      
