changed the i in all files

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
                 <a  class="separator" href="./contact.html"> Contact </a>
                 <a  class="separator" href="./portfolio.html"> Portfolio </a>
-                <a  href="Index.html"> About </a>
+                <a  href="index.html"> About </a>
 
             </nav>
     
