--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
     <div>
-        <h1 id="MH">Mauricio Hernandez</h1> 
+        <h1 class="MH">Mauricio Hernandez</h1> 
 
         
     
@@ -34,7 +34,7 @@
 
     <h2>Contact</h2>
 
-<div id="content-box">
+<div class="content-box">
         <form class="form">
     Name<br>
     <input type="text" name="name"><br>
